plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pknu'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// 스프링부트 구동을 담당하는 핵심 라이브러리입니다.
	implementation 'org.springframework.boot:spring-boot-starter'

	// -------------------<아래 한줄 추가>------------------------
	// 내장 톰캣(Tomcat)을 띄우고 REST API를 만들게 해줍니다. 
	// 이게 없으면 서버가 바로 꺼집니다.
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.fasterxml.jackson.core:jackson-databind'


	// 단위 테스트나 통합 테스트를 작성할 때 필요합니다. 
	// 실제 서버 구동(Jar 생성)에는 빠지므로 둬도 무방합니다.
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// VS-Code나 특정 IDE 환경에서 테스트를 원활하게 실행하기 위해 필요합니다. 
	// 최근 Gradle 버전에서는 명시해주는 것이 안전합니다.
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	// -------------------<아래는 추가 목록>------------------------
	/* repository에서 Database 처리를 담당
	   - JPA 관련 (Entity, Id, Table 등을 사용하기 위함) */
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	/* 오라클 데이터베이스 연결 담당
	   - ojdbc11을 사용(Java 11, 17, 21 환경 최적화 버전) */
	// implementation 'com.oracle.database.jdbc:ojdbc11:21.1.0.0'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11:21.1.0.0'

	// (선택 사항) 만약 한글 깨짐 방지나 추가 기능을 사용한다면 아래 라이브러리도 권장합니다.
    // implementation 'com.oracle.database.nls:orai18n:21.1.0.0'

	/* model에서 데이터의 getter/setter 메소드의 자동화 담당
	   - Lombok 관련 (Getter, Setter, Slf4j 등을 사용하기 위함) */
	// implementation 'org.projectlombok:lombok:1.18.28'
	compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

	/* 개발 시 브라우저 자동 리로딩 및 빠른 재시작 담당
		스프링부트 내에서 Front 개발을 직접하지는 안기때문에
		자동 리로딩은 안되며, java 코드 수정 후 브라우저 새로고침시
		수정사항이 자동으로 반영되도록 처리됩니다. */
	developmentOnly 'org.springframework.boot:spring-boot-devtools'


	implementation 'org.springframework.boot:spring-boot-starter-validation'

	/* Spring Security : 필터 체인 기반 인증/인가 담당
	   - SecurityConfig + JwtAuthenticationFilter에서 사용 */
	implementation 'org.springframework.boot:spring-boot-starter-security'

	/* JWT 토큰 생성/검증 담당 (로그인, 로그아웃 인증용) */
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
}

tasks.named('test') {
	useJUnitPlatform()
}
